--- a/landing/css/estilos.css
+++ b/landing/css/estilos.css
@@ -33,3 +33,12 @@
 	  width:30%;
 	  height:auto;
 }
+
+.enviar{
+	position:absolute;
+	  margin-top: -25%;
+	  left: 11%;
+	  width:30%;
+	  height:auto;
+	
+}
